Port pytests to Kotlin integration tests in rell-tools